# sleeping_barber_problem_project

./: .gitignore  CMakeLists.txt  Makefile  barber.c  barber.h  barbershop.c  barbershop.h  barbershop_universe.c  barbershop_universe.h  chairs_queue.c  chairs_queue.h  customer.c  customer.h  glue_threads.c  glue_threads.h  glued_thread_queue.c  glued_thread_queue.h  ignorance.c  main.c  merge_test.c  sleeping_barber_vsc  test1.c  test1.h  xtmemory.kcg.18438  xtmemory.kcg.29528
